# backend/model/group.go
@@ -6,9 +6,9 @@ import (
 )
 
 type Group struct {
-	ID        uint       `gorm:"primaryKey"`
-	Name      string     `gorm:"uniqueIndex"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt *time.Time `gorm:"index"`
+	ID        uint       `gorm:"primaryKey" json:"id"`
+	Name      string     `gorm:"uniqueIndex" json:"name"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `gorm:"index" json:"deleted_at,omitempty"`
 }
